Bug 50355 - Compile error: GL_DEPTH24_STENCIL8 undeclared
Summary: Compile error: GL_DEPTH24_STENCIL8 undeclared
Status: VERIFIED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: gl backend (show other bugs)
Version: 1.12.2
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: cairo-bugs mailing list
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-25 08:48 UTC by U. Artie Eoff
Modified: 2012-11-08 20:13 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
cairo compile error (554.64 KB, text/plain)
2012-05-25 08:48 UTC, U. Artie Eoff
Details
gl: Return GL_DEPTH24_STENCIL8_OES for GLESv2 surfaces (889 bytes, patch)
2012-09-19 16:31 UTC, buz
Details | Splinter Review

Description U. Artie Eoff 2012-05-25 08:48:16 UTC
Created attachment 62105 [details]
cairo compile error

cairo (master) 465319ce828f922edce46b6e7628da543b20d5e4
mesa (master) a1a0974401c467cb86ef818f22df67c21774a38c
pixman (master) 30816e3068bccf7c78c78f916b54971d24873bdc

----

Cairo (master) fails to compile (see attached log) using the following recipe:

Build Mesa:
1. ./autogen.sh --enable-gles2 --disable-gallium-egl --with-egl-platforms=x11,wayland,drm --enable-gbm --enable-shared-glapi
2. make -j4
3. make install

Build Cairo (fails)
1. ./autogen.sh --disable-silent-rules --enable-xcb --disable-gtk-doc --enable-glesv2 --enable-egl
2. make -j4

Bad commit is: http://cgit.freedesktop.org/cairo/commit/?id=465319ce828f922edce46b6e7628da543b20d5e4

Last known good commit is: http://cgit.freedesktop.org/cairo/commit/?id=52b7622a6c28193e4259293591b0c78070839f6c
Comment 1 U. Artie Eoff 2012-06-20 06:53:03 UTC
This is still an issue... so adding CC names mentioned in first bad commit: http://cgit.freedesktop.org/cairo/commit/?id=465319ce828f922edce46b6e7628da543b20d5e4
Comment 2 buz 2012-09-19 16:31:36 UTC
Created attachment 67407 [details] [review]
gl: Return GL_DEPTH24_STENCIL8_OES for GLESv2 surfaces

On GLESv2 surfaces, _get_depth_stencil_format should return
GL_DEPTH24_STENCIL8_OES instead of GL_DEPTH24_STENCIL8.
Comment 3 Chinasaur 2012-10-08 17:41:29 UTC
I still had this one; there is redundant preprocessing; looks like things got merged without replacing the problematic return?
Comment 4 U. Artie Eoff 2012-10-31 03:19:40 UTC
confirmed on cairo (master) 66625cb46c985321c46b79d2163a4d676d6700ba that this issue has gone away for me.  Thus, marking as fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.