gl: gles2 only supports GL_DEPTH24_STENCIL8_OES

Patch also provided by U. Artie Eoff <ullysses.a.eoff@intel.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=50355